--- a/index.html
+++ b/index.html
@@ -205,35 +205,35 @@
     <div class="copy-box">
       <img src="dana.png" alt="Dana" class="payment-logo" />
       <span>Dana</span>
-      <button onclick="copyToClipboard('081224583364')">Copy</button>
+      <button onclick="copyToClipboard('083140703672')">Copy</button>
     </div>
     <div class="copy-box">
       <img src="gopay.png" alt="Gopay" class="payment-logo" />
       <span>Gopay</span>
-      <button onclick="copyToClipboard('081224583364')">Copy</button>
+      <button onclick="copyToClipboard('083152684663')">Copy</button>
     </div>
     <div class="copy-box">
       <img src="sea.png" alt="SeaBank" class="payment-logo" />
       <span>SeaBank</span>
-      <button onclick="copyToClipboard('081224583364')">Copy</button>
+      <button onclick="copyToClipboard('Tidak Tersedia')">Copy</button>
     </div>
     <div class="copy-box">
       <img src="shopee.png" alt="ShopeePay" class="payment-logo" />
       <span>ShopeePay</span>
-      <button onclick="copyToClipboard('081224583364')">Copy</button>
+      <button onclick="copyToClipboard('Tidak Tersedia')">Copy</button>
     </div>
     <div class="copy-box">
       <img src="pulsa.png" alt="Pulsa Telkom" class="payment-logo" />
       <span>Pulsa Axis</span>
-      <button onclick="copyToClipboard('081224583364')">Copy</button>
+      <button onclick="copyToClipboard('Tidak Tersedia')">Copy</button>
     </div>
     <div class="copy-box">
       <img src="ovo.png" alt="Ovo" class="payment-logo" />
       <span>Ovo</span>
-      <button onclick="copyToClipboard('081224583364')">Copy</button>
+      <button onclick="copyToClipboard('083152684663')">Copy</button>
     </div>
     <br />
-    <a href="https://saweria.co/VinnOfficialXtzy" target="_blank" style="color: var(--btn-text); text-decoration: none; font-weight: bold;">Bayar via Saweria</a>
+    <a href="https://saweria.co/" target="_blank" style="color: var(--btn-text); text-decoration: none; font-weight: bold;">Bayar via Saweria</a>
   </div>
 
   <div id="copyPopup">Berhasil di salin!</div>
@@ -247,7 +247,7 @@
 
   <div class="footer">
     <a href="https://wa.me/6285352408213" target="_blank" style="color: var(--btn-text); text-decoration: none; font-weight: bold;">
-        © VINN STORE - Kevin
+        © Yanzzstore-payment
     </a>
 </div>
 
