--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     <div class="copy-box">
       <img src="pulsa.png" alt="Pulsa Telkom" class="payment-logo" />
       <span>Pulsa Axis</span>
-      <button onclick="copyToClipboard('Tidak Tersedia')">Copy</button>
+      <button onclick="copyToClipboard('083152684663')">Copy</button>
     </div>
     <div class="copy-box">
       <img src="ovo.png" alt="Ovo" class="payment-logo" />
